--- a/src/pages/doubleGame/Double.scss
+++ b/src/pages/doubleGame/Double.scss
@@ -95,6 +95,7 @@
             width: 1200px;
             height: 358px;
             background: #1D1A1D;
+            overflow: hidden;
             &Wrapper{
                 display: flex;
                 justify-content: space-around;
