--- a/src/pages/userCab/inventory/Inventory.scss
+++ b/src/pages/userCab/inventory/Inventory.scss
@@ -141,3 +141,59 @@
     }
     
 }
+.inventoryMobile{
+    display: none;
+}
+/* Portrait tablets and medium desktops */
+@media (min-width: 992px) and (max-width: 1199px) {
+    .inventory{
+        margin-top: 10px;
+        width: 950px;
+        overflow: hidden;
+        &Items{
+            &:nth-child(6){
+                display: none;
+            }
+            &:nth-child(7){
+                display: none;
+            }
+        }
+    }
+}
+/* Portrait tablets and small desktops */
+@media (min-width: 768px) and (max-width: 991px) {
+    .inventory{
+        margin-top: 10px;
+        width: 740px;
+        overflow: hidden;
+        &Items{
+            &:nth-child(5){
+                display: none;
+            }
+            &:nth-child(6){
+                display: none;
+            }
+            &:nth-child(7){
+                display: none;
+            }
+        }
+    }
+}
+/* Landscape phones and portrait tablets */
+@media (max-width: 767px) {
+    .inventory{
+        display: none;
+    }
+    .inventoryMobile{
+        display: block;
+    }
+}
+/* Landscape phones and smaller */
+@media (max-width: 480px) {
+    .inventory{
+        display: none;
+    }
+    .inventoryMobile{
+        display: block;
+    }
+}
