--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -80,6 +80,11 @@
             width: 500px;
             
         }
+        &__title{
+            &::after{
+                display: none;
+            }
+        }
         &__contact{
             margin-top: 20px;
         }
@@ -92,8 +97,7 @@
         padding: 0 20px;
         &__title{
             &::after{
-                width: 382px;
-                top: -50px;
+                display: none;
             }
         }
         &__contacts{
@@ -116,9 +120,7 @@
         &__title{
             font-size: 40px;
             &::after{
-                width: 282px;
-                top: 6px;
-                left: 180px;
+                display: none;
             }
         }
         &__contacts{
