--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,5 +1,5 @@
 .header{
-    max-width: 1345px;
+    width: 100%;
     height: 112px !important;
     background: #1C191B;
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.5);
@@ -90,7 +90,7 @@
             margin-right: -20px;
         }
         .sign-up{
-            width: 110px;
+            width: 160px !important;
             height: 40px;
             font-size: 16px;
         }
