--- a/src/pages/crashGame/Crash.scss
+++ b/src/pages/crashGame/Crash.scss
@@ -52,3 +52,68 @@
 
 
 
+/* Portrait tablets and medium desktops */
+@media (min-width: 992px) and (max-width: 1199px) {
+    .crash{
+        &__title{
+            &::after{
+                display: none ;
+            }
+            &_user{
+                &::after{
+                    display: none ;
+                }
+            }
+        }
+    }
+}
+/* Portrait tablets and small desktops */
+@media (min-width: 768px) and (max-width: 991px) {
+    .crash{
+        &__title{
+            &::after{
+                display: none ;
+            }
+            &_user{
+                &::after{
+                    display: none ;
+                }
+            }
+        }
+    }
+}
+/* Landscape phones and portrait tablets */
+@media (max-width: 767px) {
+    .crash{
+        margin-top: 100px;
+        &__title{
+            font-size: 30px;
+            &::after{
+                display: none ;
+            }
+            &_user{
+                font-size: 30px;
+                margin-top: 30px;
+                &::after{
+                    display: none ;
+                }
+            }
+        }
+    }
+}
+/* Landscape phones and smaller */
+@media (max-width: 480px) {
+    .crash{
+        margin-top: 100px;
+        &__title{
+            &::after{
+                display: none ;
+            }
+            &_user{
+                &::after{
+                    display: none ;
+                }
+            }
+        }
+    }
+}
