--- a/src/pages/rollrunGame/gameRollrun/GameRollrun.scss
+++ b/src/pages/rollrunGame/gameRollrun/GameRollrun.scss
@@ -51,8 +51,6 @@
                     font-family: OxaniumMedium;
                     font-size: 16px;
                     color: #FFFFFF;
-                    width: 140px;
-                    height: 40px;
                     text-align: center;
                 }
                 &Count{
@@ -102,6 +100,9 @@
         border-radius: 30px;
         overflow: hidden;
         padding-right: 20px;
+        &Icon{
+            display: none;
+        }
         &Img{
             position: absolute;
             top: 0;
@@ -192,5 +193,312 @@
                 }
             }
         }
+    }
+}
+
+.inventoryMobile{
+    display: none;
+}
+
+
+/* Portrait tablets and medium desktops */
+@media (min-width: 992px) and (max-width: 1199px) {
+    .rollrun{
+        &__game{
+            &Activity{
+                width: 960px;
+                &Choice{
+                    img{
+                        width: 100px;
+                    }
+                    &Button{
+                        width: 130px;
+                        font-size: 12px;
+                    }
+                }
+                &Create{
+                    &User{
+                        &::before{
+                            display: none;
+                        }
+                    }
+                }
+            }
+            &Quest{
+                width: 960px;
+                &Content{
+                    &Right{
+                        &Prize{
+                            margin-left: 20px;
+                        }
+                    }
+                }
+            }
+            
+        }
+    }
+}
+/* Portrait tablets and small desktops */
+@media (min-width: 768px) and (max-width: 991px) {
+    .rollrun{
+        &__game{
+            &Activity{
+                width: 730px;
+                &Choice{
+                    img{
+                        display: none;
+                    }
+                    &Button{
+                        width: 130px;
+                        font-size: 12px;
+                    }
+                }
+                &Create{
+                    gap: 10px;
+                    &User{
+                        &::before{
+                            display: none;
+                        }
+                        &Descr{
+                            font-size: 14px;
+                        }
+                        &Count{
+                            width: 47px;
+                            height: 47px;
+                        }
+                    }
+                    &Button{
+                        width: 180px;
+                        font-size: 14px;
+                    }
+                }
+            }
+            &Quest{
+                width: 730px;
+                &Content{
+                    &Right{
+                        &Prize{
+                            margin-left: 20px;
+                        }
+                    }
+                    &Left{
+                        &Counter{
+                            &Info{
+                                width: 320px;
+                            }
+                        }
+                    }
+                }
+            }
+            
+        }
+    }
+}
+/* Landscape phones and portrait tablets */
+@media (max-width: 767px) {
+    .rollrun{
+        &__game{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            &Activity{
+                position: relative;
+                width: 320px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                &Choice{
+                    img{
+                        width: 110px;
+                        position: absolute;
+                        top: 68px;
+                        left: 10px;
+                    }
+                    &Button{
+                        display: none;
+                    }
+                }
+                &Create{
+                    gap: 10px;
+                    position: absolute;
+                    left: 25px;
+                    top: 0px;
+                    margin-left: -10px;
+                    &User{
+                        margin-top: 10px;
+                        &::before{
+                            margin-right: 5px;
+                        }
+                        &Descr{
+                            font-size: 11px;
+                            width: 20px;
+                            margin-right: 70px;
+                        }
+                        &Count{
+
+                            margin-top: 10px;
+                            width: 30px;
+                            height: 30px;
+                            font-size: 15px;
+                            padding: 8px 8px;
+                        }
+                    }
+                    &Button{
+                        width: 180px;
+                        font-size: 14px;
+                        position: absolute;
+                        top: 60px;
+                        right: -10px;
+                    }
+                }
+            }
+            &Quest{
+                position: relative;
+                width: 320px;
+                margin-top: 30px;
+                height: 90px;
+                &Icon{
+                    position: absolute;
+                    bottom: 30px;
+                    right: 10px;
+                    font-size: 20px;
+                    color: white;
+                    display: block;
+                }
+                &Img{
+                    display: none;
+                }
+                &Content{
+                    margin-top: 10px;
+                    margin-left: 20px;
+                    &Right{
+                        &Prize{
+                            display: none;
+                        }
+                        &Img{
+                            display: none;
+                        }
+                    }
+                    &Left{
+                        &Counter{
+                            &Info{
+                                display: none;
+                            }
+                            &Num{
+                                display: none;
+                            }
+                        }
+                    }
+                }
+            }
+            
+        }
+    }
+    .inventoryMobile{
+        display: block;
+    }
+}
+/* Landscape phones and smaller */
+@media (max-width: 480px) {
+    .rollrun{
+        &__game{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            &Activity{
+                position: relative;
+                width: 320px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                &Choice{
+                    img{
+                        width: 110px;
+                        position: absolute;
+                        top: 68px;
+                        left: 10px;
+                    }
+                    &Button{
+                        display: none;
+                    }
+                }
+                &Create{
+                    gap: 10px;
+                    position: absolute;
+                    left: 25px;
+                    top: 0px;
+                    margin-left: -10px;
+                    &User{
+                        margin-top: 10px;
+                        &::before{
+                            margin-right: 5px;
+                        }
+                        &Descr{
+                            font-size: 11px;
+                            width: 20px;
+                            margin-right: 70px;
+                        }
+                        &Count{
+
+                            margin-top: 10px;
+                            width: 30px;
+                            height: 30px;
+                            font-size: 15px;
+                            padding: 8px 8px;
+                        }
+                    }
+                    &Button{
+                        width: 180px;
+                        font-size: 14px;
+                        position: absolute;
+                        top: 60px;
+                        right: -10px;
+                    }
+                }
+            }
+            &Quest{
+                position: relative;
+                width: 320px;
+                margin-top: 30px;
+                height: 90px;
+                &Icon{
+                    position: absolute;
+                    bottom: 30px;
+                    right: 10px;
+                    font-size: 20px;
+                    color: white;
+                    display: block;
+                }
+                &Img{
+                    display: none;
+                }
+                &Content{
+                    margin-top: 10px;
+                    margin-left: 20px;
+                    &Right{
+                        &Prize{
+                            display: none;
+                        }
+                        &Img{
+                            display: none;
+                        }
+                    }
+                    &Left{
+                        &Counter{
+                            &Info{
+                                display: none;
+                            }
+                            &Num{
+                                display: none;
+                            }
+                        }
+                    }
+                }
+            }
+            
+        }
+    }
+    .inventoryMobile{
+        display: block;
     }
 }
